--- a/src/components/Intro/INtro.css
+++ b/src/components/Intro/INtro.css
@@ -2,17 +2,18 @@
 {
     display: flex;
     height: 100vh;
-    /* background-color: green; */
+    /* background-color: #39a0ca; */
 }
 .i-img
 {
     width: 70%;
-    height: 100vh;
-    top: 0px;
+    height: 90vh;
+    top: -3vh;
     right: 60px;
-    border-radius: 10%;
+    border-radius: 20%;
     object-fit: cover;
     position: absolute;
+    animation: FadeIn 5s ease-out 0s 1 ;;
     
 }
 
@@ -44,16 +45,22 @@
 {
     font-size: 30px;
     font-weight: 300;
+    background: -webkit-linear-gradient(16deg,#4b90ff,#ff5546);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 40px;
+    font-weight: bold;
 }
 
 .i-name
 {
     font-size: 50px;
+    text-shadow: 3px 3px #39a0ca;
 }
 
 .i-title
 {
-    height: 50px;
+    height: 85px;
     overflow: hidden;
 }
 
@@ -69,10 +76,10 @@
         transform: translateY(-100px);
     }
     67%{
-        sform: translateY(-150px);
+        transform: translateY(-210px);
     }
     100%{
-        sform: translateY(-200px);
+        transform: translateY(-310px);
     }
 
 }
@@ -80,10 +87,10 @@
 
 .i-title-item
 {
-    height: 50px;
-    font-size: 30px;
+    height: 100px;
+    font-size: 60px;
     font-weight: bolder;
-    color: green;
+    color: #39a0ca;
     display: flex;
     align-items: center;
 }
@@ -92,11 +99,11 @@
 .i-bg
 {   
     clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
-    background-color: green;
+    background-color: #39a0ca;
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 0px;
+    top: -95px;
     right: 0px;
 }
 
@@ -107,6 +114,19 @@
     position: absolute;
     bottom: 10px;
     left: 40%;
+}
+
+.i-desc{
+    font-size: 22px;
+}
+
+@keyframes FadeIn {
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:1;
+    }
 }
 
 
@@ -127,6 +147,10 @@
         height: 100%;
     }
 
+    .i-title-wrapper{
+        display: none;
+    }
+
     .i-desc
     {
         display: none;
@@ -137,6 +161,7 @@
     .i-desc
     {
         display: none;
+        font-size: 100px;
     }
 }
 
