--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -10,7 +10,7 @@
 
 .p-browser
 {
-    height: 20px;
+    height: 25px;
     background-color: rgb(236, 235, 235);
     display: flex;
     align-items: center;
@@ -31,6 +31,7 @@
 .p-img
 {
     width: 100%;
+    height: 300px;
     object-fit: cover;
     transition: all 1s ease;
     opacity: 0.9;
@@ -43,18 +44,18 @@
     font-size: 30px;
     transition: all 1s ease;
     font-weight: bold;
-    text-shadow: 2px 2px green;
+    text-shadow: 2px 2px #39a0ca;
     cursor: pointer;
 }
 
 .p:hover .p-img 
 {
-    transform: translateY(-50px);
+    transform: translateY(-20px);
 }
 
 .p:hover .prod-title
 {
-    transform: translateY(-200px);
+    transform: translateY(-210px);
 }
 
 @media screen and (max-width:480px) {
